--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=123;uid=abc;password=12323424234"
+    "DefaultConnection": "server=localhost; port=3306; database=qlnh; user=root; password="
   }
 }
